#2 Model has been Configured

--- a/CRUDwithMongoDB.API/appsettings.json
+++ b/CRUDwithMongoDB.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BookStoreDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DataBaseName": "BookStore",
+    "BooksCollectionName": "Books"
+  }
 }
