#4 Has been Created BookService

--- a/CRUDwithMongoDB.API/CRUDwithMongoDB.API.csproj
+++ b/CRUDwithMongoDB.API/CRUDwithMongoDB.API.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CRUDwithMongoDB.BL\CRUDwithMongoDB.BL.csproj" />
     <ProjectReference Include="..\CRUDwithMongoDB.Common\CRUDwithMongoDB.Common.csproj" />
   </ItemGroup>
 
