--- a/CRUDwithMongoDB.BL/CRUDwithMongoDB.BL.csproj
+++ b/CRUDwithMongoDB.BL/CRUDwithMongoDB.BL.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CRUDwithMongoDB.Common\CRUDwithMongoDB.Common.csproj" />
+  </ItemGroup>
+
 </Project>
