Resolve Some Bugs

--- a/CRUDwithMongoDB.API/CRUDwithMongoDB.API.csproj
+++ b/CRUDwithMongoDB.API/CRUDwithMongoDB.API.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CRUDwithMongoDB.BL\CRUDwithMongoDB.BL.csproj" />
     <ProjectReference Include="..\CRUDwithMongoDB.Common\CRUDwithMongoDB.Common.csproj" />
+    <ProjectReference Include="..\CRUDwithMongoDB.DAL\CRUDwithMongoDB.DAL.csproj" />
   </ItemGroup>
 
 </Project>
