--- a/CRUDwithMongoDB.DAL/CRUDwithMongoDB.DAL.csproj
+++ b/CRUDwithMongoDB.DAL/CRUDwithMongoDB.DAL.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
   </ItemGroup>
 
